// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Component Renders the carousel component 1`] = `
<body>
  <div>
    <section
      class="carousel"
    >
      <div
        class="carousel__chosen-image"
      >
        <button
          class="button button__primary"
          data-testid="test-id-carousel-choose-button"
          type="submit"
        >
          Choose this image
        </button>
        <p>
          Chosen image:
           None
        </p>
      </div>
    </section>
  </div>
</body>
`;

exports[`Carousel Component Update the swiper 1`] = `
<body>
  <div>
    <section
      class="carousel"
    >
      <div
        class="carousel__chosen-image"
      >
        <button
          class="button button__primary"
          data-testid="test-id-carousel-choose-button"
          type="submit"
        >
          Choose this image
        </button>
        <p>
          Chosen image:
           2B.png
        </p>
      </div>
    </section>
  </div>
</body>
`;
